Saving changes to the home page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
         <div class="welcome_grid1">
           <img src="images/Water dumpO.jpg" class="welcome_img" alt="">
         </div>
-        <div class="welcome_grid">
-
+        <div class="welcome_grid2">
+          <h1>Welcome To VW2WS Refuse Disposal's</h1>
+          <p>
+            We are a company that does your Refuse desposal to your satisfaction, on this website, you will be provided with all necessary
+            information needed, on this website, you can also order for a refuse desposal company to come and despose your waste, you can also
+            report any unpleasing or fraudulent behaviour of any refuse desposal agent, we promise you low risk because our refuse desposal 
+            agents are certified and well trained with the companys RULES AND REGULATIONS
+          </p>
         </div>
       </div>
       <div class="secondT">
@@ -194,6 +200,31 @@
     </div>
   </section> -->
 
+  <h1 class="company_header">
+    Companis that partner with us
+  </h1>
+  <div class="companies">
+    <img src="images/oyo-waste.jpg" class="company_img" alt="">
+    <img src="images/oyo-waste.jpg" class="company_img" alt="">
+    <img src="images/oyo-waste.jpg" class="company_img" alt="">
+    <img src="images/oyo-waste.jpg" class="company_img" alt="">
+    <img src="images/oyo-waste.jpg" class="company_img" alt="">
+    <img src="images/oyo-waste.jpg" class="company_img" alt="">
+  </div>
+
+  <div class="agent_grid">
+    <div class="agent_grid1">
+      <h1 class="agent_header">Our Agents</h1>
+      <p class="agent_text">
+        Our Company provides you with the best companies <br> and delivery agents that does all works to your satisfaction <br> and 
+        according to your specification, our agents are well trained <br> and they do their task according to the manuscript given to them, <br>
+        we also assure you 100% security while you deal with us.
+      </p>
+    </div>
+    <div class="agent_grid2">
+      <img src="images/Plate+4_+Solid+waste+dumping+at+the+parking+space+beside+the+road+at+Ojoo,+Oyo+state,+Nigeria.jpg" class="agent_img" alt="">
+    </div>
+  </div>
 
   <section class="footer_section">
     <div class="footer">
