Saving changes to the home page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section class="hero">
     <div id="scroll-container">
       <div id="headtexts">
-        <h3>Victor's Waste to Wealth Scheme</h3>
+        <h3 class="moving">Victor's Waste to Wealth Scheme</h3>
       </div>
     </div>
     <div class="introText">
@@ -61,6 +61,19 @@
           </p>
         </div>
       </div>
+
+      <div class="rotate_grid">
+        <div class="rotate">
+          <h2 class="top">5*</h2>
+        </div>
+        <div class="rotate">
+          <h2 class="top">4*</h2>
+        </div>
+        <div class="rotate">
+          <h2 class="top">3*</h2>
+        </div>
+      </div>
+
       <div class="secondT">
         <h2 id="blouse">VW2WS helps to solve all problems related to Refuse Dumpage </h2>
       </div>
@@ -223,6 +236,29 @@
     </div>
     <div class="agent_grid2">
       <img src="images/Plate+4_+Solid+waste+dumping+at+the+parking+space+beside+the+road+at+Ojoo,+Oyo+state,+Nigeria.jpg" class="agent_img" alt="">
+    </div>
+  </div>
+
+  <div class="rated_company">
+    <div class="conpany_grid1">
+      <img src="Images/Plate+2_+Over+filled+collection+bin+with+waste+littering+the+environment+at+Ojoo,+Oyo+state,+Nigeria.jpg" class="rated_company" alt="">
+      <img src="images/rating.jpg" class="star" alt="">
+    </div>
+    <div class="conpany_grid1">
+      <img src="images/Waste-collection-scenarios-in-Ibadan.png" class="rated_company" alt="">
+      <img src="images/rating.jpg" class="star" alt="">
+    </div>
+    <div class="conpany_grid1">
+      <img src="images/project_hero.jpg" class="rated_company" alt="">
+      <img src="images/rating.jpg" class="star" alt="">
+    </div>
+    <div class="conpany_grid1">
+      <img src="Images/Water dumpO.jpg" class="rated_company" alt="">
+      <img src="images/rating.jpg" class="star" alt="">
+    </div>
+    <div class="conpany_grid1">
+      <img src="images/Plate+4_+Solid+waste+dumping+at+the+parking+space+beside+the+road+at+Ojoo,+Oyo+state,+Nigeria.jpg" class="rated_company" alt="">
+      <img src="images/rating.jpg" class="star" alt="">
     </div>
   </div>
 
