saving more changes to the home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li class="services">
-          <a href="/">Register-as</a>
+          <a href="hom">Register-as</a>
           <ul class="dropdown">
             <li><a href="/">A Residential Living </a></li>
             <li><a href="/">A Street</a></li>
@@ -28,7 +28,6 @@
             <li><a href="/">A Contractor</a></li>
           </ul>
         </li>
-        <li><a href="/">Pricing</a></li>
         <li><a href="/">Contact-Us</a></li>
       </div>
     </ul>
@@ -261,6 +260,17 @@
       <img src="images/rating.jpg" class="star" alt="">
     </div>
   </div>
+
+  <div class="rating">
+       <div class="rating_col1">
+           <h1 class="excellent">Excellent</h1>
+        <h1 class="product_rating">Product rating</h1>
+        <h2 class="product_rating_text">Every buyer has an option to rate the product he/she has just purchased, and also to rate the A-Shoppy's delivery agent, through your rating we will improve on our delivery policies, you can drop a review of 1 stat to 5 star </h2>
+       </div>
+        <div class="rating_col2">
+            <img src="Images/rate.jpg" alt="">
+        </div>
+    </div>
 
   <section class="footer_section">
     <div class="footer">
