--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="/">A Contractor</a></li>
           </ul>
         </li>
-        <li><a href="/">Contact-Us</a></li>
+        <li><a href="contact.html">Contact-Us</a></li>
       </div>
     </ul>
   </nav>
