saving more changes to the home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="services">
           <a href="hom">Register-as</a>
           <ul class="dropdown">
-            <li><a href="/">A Residential Living </a></li>
+            <li><a href="resident.html">A Residential Living </a></li>
             <li><a href="/">A Street</a></li>
             <li><a href="/">A Community</a></li>
             <li><a href="/">Bussines</a></li>
