saving more changes to the home page

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
+          <div class="card no_card">
             <div class="card_content">
               <div class="card_image">
                 <img src="images/Refuse-Management-and-Sanitation-Board.webp" class="card_img" alt="">
@@ -126,8 +126,11 @@
               <img src="partner-leeting.jfif" class="patnership_image" alt="">
           </div>
       </div>
+
+      <h1 class="registeration_form">Fill Out Our Registeration Form</h1>
       <div class="our_agreement">
-        remember agreement
+        <img src="images/Screenshot (165).png" class="registeration_form_img" alt="">
+        <img src="images/Screenshot (167).png" class="registeration_form_img" alt="">
       </div>
 
 
