--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="firstT">
         <h1 style="background-color: blueviolet; width: 100%; margin: 0;"> We are happy you are here today 👍 </h1>
       </div>
+    </div>
       <div class="hero_image">
 
       </div>
