saving changes to all other oages

--- a/about.html
+++ b/about.html
@@ -56,16 +56,16 @@
         <h1 class="conultant_header">Our Directors </h1>
         <div class="consultants">
           <div class="concultant_div1">
-            <img src="Images/team1.png" alt="">
+            <img src="Images/team1.png" class="consultant_img" alt="">
           </div>
           <div class="concultant_div1">
-            <img src="Images/team2.png" alt="">
+            <img src="Images/team2.png" class="consultant_img" alt="">
           </div>
           <div class="concultant_div1">
-            <img src="Images/team3.png" alt="">
+            <img src="Images/team3.png" class="consultant_img" alt="">
           </div>
           <div class="concultant_div1">
-            <img src="Images/team4.png" alt="">
+            <img src="Images/team4.png" class="consultant_img" alt="">
           </div>
         </div>
 
@@ -170,7 +170,7 @@
             <li>Olist</li>
             <li>Opera for Business</li>
           </ul>
-          <ul>
+          <ul class="no_list">
             <li>Services</li>
             <li>Addons</li>
             <li>Opera account</li>
@@ -180,7 +180,7 @@
             <li>Olist</li>
             <li>Opera for Business</li>
           </ul>
-          <ul>
+          <ul class="no_list">
             <li>Services</li>
             <li>Addons</li>
             <li>Opera account</li>
