Working on the functionality

--- a/index.html
+++ b/index.html
@@ -174,6 +174,45 @@
         </div>
       </div>
 
+      <div class="philosophy">
+        <div>
+          <img src="images/about-img2.png" alt="">
+        </div>
+        <div>
+          <h1>Our <br>
+            Philosophy
+          </h1>
+          <p> The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+
+            Interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+  
+          </p>
+          <p class="boss">
+            <small>CEO, VW2WS</small>
+
+          <h1>Victor HTML</h1>
+          </p>
+        </div>
+      </div>
+      <div class="philosophy special_philosophy">
+        <div class="area1">
+          <h1>Our <br>
+            Professionals
+          </h1>
+          <p> The automated process starts as soon as your clothes go into the machine. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+
+            Interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+  
+          </p>
+          <p class="boss">
+
+          <h1>VW2WS Professionals</h1>
+          </p>
+        </div>
+        <div class="area2">
+          <img src="images/projects-img2.png" alt="">
+        </div>
+      </div>
 
       <!-- <div id="container">
         <div class="flip-card">
