--- a/resident.html
+++ b/resident.html
@@ -36,9 +36,20 @@
 
     </div>
 
+    <h1 class="register_heading">Register Now For your Refuse Desposal</h1>
+
+    
     <div class="housing">
         <img src="images/Dumpsite-In-Ibadan.jpg" class="housing_img" alt="">
-        <h2>Make your Neat and tidy for healthy living</h2>
+        <div>
+          <h2>Make your Neat and tidy for healthy living</h2>
+        <p>Our company helps you reduce the stress of disposing your refuse, we will come directly to your 
+          redidence and tidy the refuse and help you despose them, we also work with fixed prices And
+          budget, you might not be able to afford the fixed price thats why the company 
+          place a space for your budget which is negotiable, we negotiate the price of the 
+          refuse desposal and we communicate more using gmail, after filling the first form, the remaining 
+          necessary information and negotiation will be done through gmail
+        </div>
     </div>
     
     <div class="container">
