saving media Query

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         </ul>
       </div>
     </div>
-    <p class="copyright">&copy; all rights reserved VW2WS</p>
+    <p class="copyright">&copy; all rights reserved VW2WS, VICTOR</p>
   </section>
 
   <script src="script.js"></script>
